Added & Update .upptimerc.yml
Added Status Page Links, Config and updated the .uptimerc.yml file.

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,14 +1,19 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: TuxTechLab # GitHub organization or username, where this repository lives
+repo: up # The name of this repository
 
 sites:
+  # Actual Websites
   - name: Google
     url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+  - name: GitHub
+    url: https://www.github.com
+  # Social Pages
+  - name: LinkTree
+    url: https://linktr.ee
+  - name: LinkTree Admin Dashboard
+    url: https://linktr.ee/arindamtanti
+  # Test Broken Websites
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
   - name: IPv6 test
@@ -20,12 +25,12 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # cname: demo.upptime.js.org
+  baseUrl: /up
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: up
+  introTitle: "[**Up**](https://tuxtechlab.github.io/up/) is the uptime monitor and status page, powered entirely by GitHub powered by [**Upptime**](https://github.com/upptime/upptime)."
+  introMessage: A sample status page which uses **real-time** data from our [GitHub repository](https://github.com/tuxtechlab/up). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
