--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ sites:
   - name: TuxTechLab Home
     url: https://www.TuxTechLab.com
   - name: Blogs by TuxTechLab
-    url: https://tuxtechlab.github.io/Blogs/
+    url: https://tuxtechlab.github.io/Blogs
   # Test Broken Websites
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
